Try interpolation when downsampling back to output
note: it doesn't work well - clicking noise still present when playing a note continuously

--- a/src/platformio.ini
+++ b/src/platformio.ini
@@ -17,7 +17,7 @@ build_flags =
     ; These flags enable serial monitor over USB UART
     -D USBD_USE_CDC                 ; Define USB Communications Device Class (for serial I/O)
     -D USBCON                       ; Enable USB connection in Arduino (?)
-    -O3
+    -Ofast
 ; This is not documented on PlatformIO website but
 ; enables the DFU firmware upload (over USB)
 upload_protocol = dfu
