Remove dependency on arduino (WIP)

--- a/src/platformio.ini
+++ b/src/platformio.ini
@@ -1,23 +1,43 @@
+[platformio]
+platforms_dir = platforms
+packages_dir = packages
+lib_dir = lib
+libdeps_dir = libdeps
+src_dir = src
+
 [env:electrosmith_daisy]
 platform = ststm32
+platform_packages = 
+	toolchain-gccarmnoneeabi@1.90301.200702
 board = electrosmith_daisy
-framework = arduino
+framework = stm32cube
+lib_ldf_mode = deep
+board_build.mcu = stm32h750ibk6
 board_build.f_cpu = 480000000L
-; ----------
-; Everything(?) below this needs to be added to use DaisyDuino in PlatformIO.
-; Setting up a new project or importing from Arduino does not add any of this.
-; ----------
-lib_deps = 
-    electro-smith/DaisyDuino@^1.5.2
-    Wire 
-
-build_flags = 
-    ; -w                            ; optional - to suppress redundant definition warnings
-    -D HAL_SDRAM_MODULE_ENABLED     ; required? build fails without this one
-    ; These flags enable serial monitor over USB UART
-    -D USBD_USE_CDC                 ; Define USB Communications Device Class (for serial I/O)
-    -D USBCON                       ; Enable USB connection in Arduino (?)
-    -Ofast
-; This is not documented on PlatformIO website but
-; enables the DFU firmware upload (over USB)
+board_build.ldscript = lib/libDaisy/core/STM32H750IB_flash.lds
+board_build.stm32cube.custom_config_header = yes
+debug_port = /dev/cu.usbmodemBFC698FD3
+; upload_port = /dev/cu.usbmodemBFC698FD1
 upload_protocol = dfu
+upload_tool= dfu-util
+; upload_protocol = blackmagic
+debug_tool = blackmagic
+extra_scripts = supplimental_linker_script.py
+src_filter = 
+	+<*> -<.git/> -<.svn/> -<example/> -<examples/> -<test/> -<tests/>
+build_flags = 
+	-D USBCON
+	; -D USBD_VID=0x0483
+	; -D USBD_PID=0x5740
+	; -D USB_MANUFACTURER="Unknown"
+	; -D USB_PRODUCT="\"ELECTROSMITH_DAISY CDC in FS Mode\""
+	-mthumb
+    -mfloat-abi=hard
+    -mfpu=fpv5-d16
+	-mcpu=cortex-m7
+	-D USE_HAL_DRIVER
+	-D USE_FULL_LL_DRIVER
+	-D STM32H750xx
+	-I $PROJECT_DIR/lib/libDaisy/core
+build_unflags =
+	-std=gnu++11
